--- a/python/templates/index.html
+++ b/python/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<p><em>Hello, {{ name }}. Welcome to my app!</em></p>
+<p><em>What is your name?</em>
+    <form action="/welcome" method="POST"><input name="myName"><input type="submit" value="Submit"></form>
+</p>
 {% endblock %}
