--- a/python/templates/welcome.html
+++ b/python/templates/welcome.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<p><em>This is the Welcome page!</em></p>
+<p><em>Hello, {{ myName }}!</em></p>
 {% endblock %}
